# protpardelle-1c

./: .gitignore  .pre-commit-config.yaml  Protpardelle_1c.ipynb  README.md  download_model_params.sh  pyproject.toml  pytest.ini  setup.sh  uv_indexes.txt
.github/: copilot-instructions.md
.github/workflows/: README.md  ci.yml  code-quality.yml  codeql.yml  dependency-update.yml  docs.yml  model-validation.yml  release.yml  status.yml
examples/sampling/: 00_unconditional.yaml  01_partial_diffusion.yaml  02_motif_scaffolding.yaml  03_motifbench.yaml  04_bindcraft.yaml  05_multichain.yaml  06_fastrelax.yaml  07_rfdiffusion.yaml  08_rfdiffusion_allatom.yaml  09_structure_prediction.yaml  10-crop_cond_partial_diffusion.yaml  11_latent_interp.yaml  12_rfdiffusion_allatom_stage2.yaml
examples/training/: cc58-minimpnn.yaml  cc58-ums.yaml  cc58.yaml  cc78.yaml  cc83.yaml  cc89.yaml  cc91.yaml  cc91_neigh.yaml  cc91_tip.yaml  cc91_tip_cont.yaml  cc91_tip_neigh.yaml  cc94.yaml  cc95.yaml
scripts/: eval_samples.py  eval_samples.sbatch  likelihood.py  sample.sbatch  train.sbatch
scripts/bindcraft/: af2.py  af2_multimer_design.py  bindcraft_utils.py
src/protpardelle/: __init__.py  env.py  evaluate.py  likelihood.py  sample.py  train.py  utils.py
src/protpardelle/common/: protein.py  residue_constants.py
src/protpardelle/configs/: __init__.py  model_dataclasses.py  running_dataclasses.py  sampling_dataclasses.py  training_dataclasses.py
src/protpardelle/configs/model_configs/: sampling_allatom_recon_rep_s1.yaml  sampling_fastrelax.yaml  sampling_partial_diffusion.yaml  sampling_partial_diffusion_allatom.yaml  sampling_recon_rep.yaml  sampling_sidechain_conditional.yaml  sampling_sidechain_conditional_allatom.yaml  sampling_sidechain_conditional_allatom_recon_rep.yaml  sampling_sidechain_conditional_allatom_recon_rep_s1.yaml  sampling_sidechain_conditional_allatom_recon_rep_s1_tip.yaml  sampling_sidechain_conditional_allatom_s1.yaml  sampling_sidechain_conditional_allatom_s1_tip.yaml  sampling_sidechain_conditional_recon_rep.yaml  sampling_unconditional.yaml  sampling_unconditional_allatom.yaml  sampling_unconditional_allatom_s1.yaml
src/protpardelle/configs/running/: sampling_allatom_recon_rep_s1.yaml  sampling_fastrelax.yaml  sampling_partial_diffusion.yaml  sampling_partial_diffusion_allatom.yaml  sampling_recon_rep.yaml  sampling_sidechain_conditional.yaml  sampling_sidechain_conditional_allatom.yaml  sampling_sidechain_conditional_allatom_recon_rep.yaml  sampling_sidechain_conditional_allatom_recon_rep_s1.yaml  sampling_sidechain_conditional_allatom_recon_rep_s1_tip.yaml  sampling_sidechain_conditional_allatom_s1.yaml  sampling_sidechain_conditional_allatom_s1_tip.yaml  sampling_sidechain_conditional_recon_rep.yaml  sampling_unconditional.yaml  sampling_unconditional_allatom.yaml  sampling_unconditional_allatom_s1.yaml
src/protpardelle/configs/sampling/: sampling_allatom_recon_rep_s1.yaml  sampling_sidechain_conditional_allatom.yaml  sampling_sidechain_conditional_allatom_s1.yaml  sampling_sidechain_conditional_allatom_s1_tip.yaml  sampling_sidechain_conditional_partial_diffusion.yaml  sampling_sidechain_conditional_partial_diffusion_allatom.yaml  sampling_unconditional.yaml  sampling_unconditional_allatom.yaml  sampling_unconditional_allatom_s1.yaml
src/protpardelle/core/: diffusion.py  models.py  modules.py
src/protpardelle/data/: align.py  atom.py  cycpep.py  dataset.py  motif.py  pdb_io.py  protein.py  sequence.py
src/protpardelle/integrations/: esmfold.py  protein_mpnn.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  test_cycpep.py  test_env.py  test_evaluate.py  test_likelihood.py  test_motifbench.py  test_sample.py  test_train.py  test_utils.py
tests/common/: test_protein.py  test_residue_constants.py
tests/configs/: __init__.py  test_running_dataclasses.py  test_sampling_dataclasses.py  test_training_dataclasses.py
tests/core/: __init__.py  test_diffusion.py  test_models.py  test_modules.py
tests/data/: __init__.py  test_align.py  test_atom.py  test_cycpep.py  test_dataset.py  test_motif.py  test_pdb_io.py  test_protein.py  test_residue_constants.py  test_sequence.py
tests/integrations/: __init__.py  test_esmfold.py  test_protein_mpnn.py
