[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protpardelle"
authors = [
    { name = "Tianyu Lu", email = "tianyulu@stanford.edu" },
    { name = "Richard Shuai", email = "rshuai@stanford.edu" },
    { name = "Petr Kouba", email = "petrkouba3@gmail.com" },
    { name = "Zhaoyang Li", email = "zhaoyangli@stanford.edu" },
    { name = "Yilin Chen", email = "yilinc5@stanford.edu" },
    { name = "Akio Shirali", email = "akios@stanford.edu" },
    { name = "Jinho Kim", email = "zhkim216@stanford.edu" },
    { name = "Po-Ssu Huang", email = "possu@stanford.edu" },
]
license = { file = "LICENSE" }
dynamic = ["version"]
description = "Conditional Protein Structure Generation with Protpardelle-1c"
readme = "README.md"
requires-python = ">=3.10"

# Required dependencies
dependencies = [
    "biopython",
    "biotite",
    "dm-tree",
    "einops",
    "huggingface_hub",
    "hydra-core",
    "jaxtyping",
    "jupyter",
    "ml_collections",
    "modelcif",
    "numpy",
    "omegaconf",
    "pandas",
    "prody",
    "pyyaml",
    "scipy",
    "torch>=2.6.0",
    "tqdm",
    "transformers",
    "typer",
    "wandb",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pre-commit", "ruff", "mypy", "pyright"]
viz = ["py3dmol", "matplotlib", "seaborn"]

[tool.pytest.ini_options]
addopts = "-v -s"
testpaths = ["tests"]

[tool.setuptools.dynamic]
version = { attr = "protpardelle.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["protpardelle", "protpardelle.*"]

[tool.setuptools.package-data]
protpardelle = ["configs/**/*.yaml"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]
extend-exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".svn",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "B", "UP", "SIM", "C90"]

[tool.ruff.lint.isort]
known-first-party = ["protpardelle"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
mypy_path = "src"
files = ["src", "tests"]
check_untyped_defs = true
warn_unused_configs = true
no_implicit_reexport = true
strict_equality = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = "matplotlib.*,seaborn.*"
ignore_missing_imports = true
